# berger

./: Cargo.toml  Dockerfile  README.md  sqlx-data.json
.github/workflows/: check.yml  deploy.yml
migrations/: 20220222160443_init.sql  20220429100549_index_task_groups.sql  20220719145941_add_index_task_groups.sql
src/: db.rs  error.rs  main.rs  models.rs  pulse.rs
src/views/: auth.rs  mod.rs  repo_list.rs  task_list.rs  utils.rs
static/css/: base.css  base.css.map
static/sass/: base.sass
templates/: base.html  index.html  menu.html.tera  repo_list.html
