[package]
name = "berger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2"
tracing = "0.1"
futures-lite = "1.12"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "offline", "chrono", "time"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = "1"
once_cell = "1"
poem = { version = "1", features = ["compression", "static-files", "anyhow", "session"] }
askama = "0.11"
lazy_static = "1"
anyhow = "1"
taskcluster = "44"
oauth2 = "4"
reqwest = "0.11"
thiserror = "1"
itertools = "0.10.3"
